增加常用功能接口

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LittleDemoActivity"></activity>
+        <activity android:name=".LittleDemoActivity" />
+        <activity android:name=".ConstraintLayoutActivity" />
+        <activity android:name=".CommonFunctionActivity"></activity>
     </application>
 
 </manifest>
