增加Layout布局以及内部属性测试Demo

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         </activity>
         <activity android:name=".LittleDemoActivity" />
         <activity android:name=".ConstraintLayoutActivity" />
-        <activity android:name=".CommonFunctionActivity"></activity>
+        <activity android:name=".CommonFunctionActivity" />
+        <activity android:name=".LayoutDemoActivity"></activity>
     </application>
 
 </manifest>
