--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.1.0-beta3'
     testCompile 'junit:junit:4.12'
+    compile 'io.reactivex:rxandroid:1.2.1'
+    compile 'io.reactivex:rxjava:1.1.6'
 }
