--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         <activity android:name=".CommonFunctionActivity" />
         <activity android:name=".LayoutDemoActivity" />
         <activity android:name=".RetrofitRxjavaOkhttpActivity" />
-        <activity android:name=".CustomWidgetActivity"></activity>
+        <activity android:name=".CustomWidgetActivity" />
+        <activity android:name=".GsonActivity"></activity>
     </application>
 
 </manifest>
